- Corrected error in makefile
git-svn-id: svn://localhost/imageutil@12 2f7c8d18-564d-423b-916e-c6e2905f5601

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,21 +1,22 @@
 GCC=/usr/bin/gcc
 SH4-GCC=/usr/bin/sh4-unknown-linux-gnu-gcc
 
+.PHONY: all
+all: imageutil
+
 kathi/nethelper: kathi/nethelper.c kathi/nethelper.h
-	$(SH4-GCC) kathi/nethelper.c -o kathi/nethelper
+	${SH4-GCC} kathi/nethelper.c -o kathi/nethelper
 
 nethelper_resource.h: kathi/nethelper
 	@echo Generating nethelper_resource.h
 	@../utils/bin2c kathi/nethelper nethelper_resource NETHELPER_DATA
 
 imageutil: imageutil.c imageutil.h nethelper_resource.h
-	$(GCC) imageutil.c -o imageutil
+	${GCC} imageutil.c -o imageutil
 
-.PHONY clean
+.PHONY: clean
 clean:
-	-rm kathi/nethelper
-	-rm nethelper_resource.h
-	-rm imageutil
+	-rm kathi/nethelper >/dev/null 2>&1
+	-rm nethelper_resource.h >/dev/null 2>&1
+	-rm imageutil >/dev/null 2>&1
 
-.PHONY all
-all: imageutil
