- Fixed typo in usage output - Changed makefile to compilte nethelper with -Os
git-svn-id: svn://localhost/imageutil@25 2f7c8d18-564d-423b-916e-c6e2905f5601

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ SH4-GCC=/usr/bin/sh4-unknown-linux-gnu-gcc
 all: imageutil
 
 kathi/nethelper: kathi/nethelper.c kathi/nethelper.h crc/crc.c crc/crc.h
-	${SH4-GCC} kathi/nethelper.c crc/crc.c -o kathi/nethelper
+	${SH4-GCC} -Os kathi/nethelper.c crc/crc.c -o kathi/nethelper
 
 nethelper_resource.h: kathi/nethelper
 	@echo Generating nethelper_resource.h
