--- a/src/Makefile
+++ b/src/Makefile
@@ -20,3 +20,6 @@ clean:
 	-rm nethelper_resource.h >/dev/null 2>&1
 	-rm imageutil >/dev/null 2>&1
 
+.PHONY: package
+package: imageutil
+	@../utils/mkpackage.sh
